--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="1280" prefWidth="1920" side="LEFT" stylesheets="@adminstage.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="1280" prefWidth="1920" side="LEFT" stylesheets="@adminstage.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.adminconsole.AdminScreenController">
   <tabs>
     <Tab text="Users">
          <content>
@@ -206,12 +206,12 @@
                               </Text>
                               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" styleClass="search-bar-container">
                                  <children>
-                                    <TextField alignment="CENTER" prefHeight="45.0" prefWidth="360.0" promptText="Enter Username:">
+                                    <TextField alignment="CENTER" prefHeight="45.0" prefWidth="360.0" promptText="Enter Username:" fx:id="searchField">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </TextField>
-                                    <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="110.0" styleClass="search-button" text="Search">
+                                    <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="110.0" styleClass="search-button" text="Search" onAction="#onSearchButtonClick">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
