--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -19,6 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.PasswordField?>
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="1280" prefWidth="1920" side="LEFT" stylesheets="@adminstage.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.adminconsole.AdminScreenController">
   <tabs>
     <Tab text="Users">
@@ -126,25 +127,25 @@
                                     <Insets right="510.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" />
+                              <TextField alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" fx:id="emailField"/>
                               <Label prefHeight="40.0" prefWidth="93.0" text="Username">
                                  <VBox.margin>
                                     <Insets right="473.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField />
+                              <TextField fx:id="usernameField"/>
                               <Label alignment="CENTER" contentDisplay="BOTTOM" prefHeight="40.0" prefWidth="88.0" text="Password">
                                  <VBox.margin>
                                     <Insets right="475.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" />
+                              <PasswordField alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" fx:id="passwordField" />
                               <Label contentDisplay="BOTTOM" prefHeight="40.0" prefWidth="178.0" text="Select Role Type">
                                  <VBox.margin>
                                     <Insets right="390.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <ChoiceBox prefHeight="50.0" prefWidth="269.0">
+                              <ChoiceBox prefHeight="50.0" prefWidth="269.0" fx:id="roleField">
                                  <VBox.margin>
                                     <Insets right="300.0" />
                                  </VBox.margin>
