--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
@@ -44,7 +44,7 @@
          <children>
             <FlowPane hgap="20.0" prefHeight="150.0" prefWidth="525.0" vgap="10.0">
                <children>
-                  <Button fx:id="itemcorrect" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Item Correct" />
+                  <Button fx:id="itemcorrect" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Item Correct" onAction="#correctLastItem"/>
                   <Button fx:id="voiditem" layoutX="20.0" layoutY="20.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Void Item" onAction="#voidSelectedItem"/>
                   <Button layoutX="140.0" layoutY="20.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Send" />
                   <Button fx:id="restart" layoutX="260.0" layoutY="20.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Restart" onAction="#restartOrder"/>
