--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -308,7 +308,7 @@
                               <Insets top="30.0" />
                            </VBox.margin>
                         </HBox>
-                        <GridPane alignment="TOP_CENTER" gridLinesVisible="true" styleClass="grid-pane">
+                        <GridPane alignment="TOP_CENTER" gridLinesVisible="true" styleClass="grid-pane" fx:id="menuTable">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="318.21673583984375" minWidth="10.0" prefWidth="306.19122314453125" />
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.0467529296875" minWidth="10.0" prefWidth="209.5977783203125" />
