--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -350,19 +350,19 @@
                                     <Insets right="400.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" styleClass="text-field" />
+                              <TextField alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" styleClass="text-field" fx:id="itemNameField" />
                               <Label prefHeight="40.0" prefWidth="83.0" text="Price">
                                  <VBox.margin>
                                     <Insets right="473.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField />
+                              <TextField fx:id="priceField"/>
                               <Label alignment="CENTER" contentDisplay="BOTTOM" prefHeight="40.0" prefWidth="257.0" text="Item Type">
                                  <VBox.margin>
                                     <Insets right="470.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <ChoiceBox layoutX="31.0" layoutY="532.0" prefHeight="45.0" prefWidth="396.0">
+                              <ChoiceBox layoutX="31.0" layoutY="532.0" prefHeight="45.0" prefWidth="396.0" fx:id="itemTypeField">
                                  <VBox.margin>
                                     <Insets right="210.0" />
                                  </VBox.margin>
@@ -372,7 +372,7 @@
                                     <Insets right="360.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <ChoiceBox prefHeight="45.0" prefWidth="398.0">
+                              <ChoiceBox prefHeight="45.0" prefWidth="398.0" fx:id="dietaryRequirementsField">
                                  <VBox.margin>
                                     <Insets right="210.0" />
                                  </VBox.margin>
@@ -382,7 +382,7 @@
                                     <Insets right="360.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextArea prefHeight="200.0" prefWidth="569.0" />
+                              <TextArea prefHeight="200.0" prefWidth="569.0" fx:id="itemDescriptionArea"/>
                               <HBox prefHeight="43.0" prefWidth="569.0">
                                  <children>
                                     <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="171.0" styleClass="add-buttons" text="Add Menu Item">
@@ -440,12 +440,12 @@
                               </Text>
                               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" styleClass="search-bar-container">
                                  <children>
-                                    <TextField alignment="CENTER" prefHeight="45.0" prefWidth="360.0" promptText="Enter Menu Item:">
+                                    <TextField alignment="CENTER" prefHeight="45.0" prefWidth="360.0" promptText="Enter Menu Item:" fx:id="searchFieldMenuItem">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </TextField>
-                                    <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="110.0" styleClass="search-button" text="Search">
+                                    <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="110.0" styleClass="search-button" text="Search" onAction="#onMenuItemSearchButtonClick">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
