--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -395,7 +395,7 @@
                                           <Insets right="25.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="114.0" styleClass="cancel-button" text="Cancel" />
+                                    <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="114.0" styleClass="cancel-button" text="Cancel" onAction="#onMenuItemCancelButtonClick"/>
                                  </children>
                                  <VBox.margin>
                                     <Insets top="40.0" />
@@ -450,7 +450,7 @@
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" styleClass="cancel-button" text="Clear" />
+                                    <Button mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" styleClass="cancel-button" text="Clear" onAction="#onMenuItemClearButtonClick"/>
                                  </children>
                                  <VBox.margin>
                                     <Insets left="40.0" right="20.0" />
