--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
@@ -46,15 +46,15 @@
       <HBox prefHeight="103.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
          <children>
             <Region HBox.hgrow="ALWAYS" />
-            <FlowPane hgap="20.0" prefHeight="90.0" prefWidth="512.0" vgap="10.0">
+            <FlowPane hgap="20.0" prefHeight="71.0" prefWidth="515.0" vgap="10.0">
                <children>
-                  <Button fx:id="send" layoutX="140.0" layoutY="20.0" mnemonicParsing="false" onAction="#sendOrder" styleClass="send-button" text="Send" />
+                  <Button fx:id="send" layoutX="140.0" layoutY="20.0" mnemonicParsing="false" onAction="#sendOrder" prefHeight="45.0" prefWidth="95.0" styleClass="send-button" text="Send" />
                   <Button fx:id="itemcorrect" mnemonicParsing="false" onAction="#correctLastItem" prefHeight="45.0" prefWidth="130.0" styleClass="correct-buttons" text="Item Correct" />
                   <Button fx:id="voiditem" layoutX="20.0" layoutY="20.0" mnemonicParsing="false" onAction="#voidSelectedItem" prefHeight="45.0" prefWidth="115.0" styleClass="void-button" text="Void Item" />
                   <Button fx:id="restart" layoutX="260.0" layoutY="20.0" mnemonicParsing="false" onAction="#restartOrder" prefHeight="45.0" prefWidth="95.0" styleClass="restart-button" text="Restart" />
                </children>
                <HBox.margin>
-                  <Insets bottom="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="10.0" right="10.0" top="15.0" />
                </HBox.margin>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -112,7 +112,7 @@
             </HBox>
             <GridPane fx:id="orderSummaryGrid" styleClass="grid-pane">
             </GridPane>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
                <children>
                   <HBox alignment="CENTER" prefHeight="45.0" prefWidth="524.0" spacing="30.0" styleClass="order-header">
                      <children>
